--- a/template.html
+++ b/template.html
@@ -4,7 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>Criptosasun Energía</title>
-
+    <link
+      rel=" icon"
+      href="https://res.cloudinary.com/dwkb2dk5r/image/upload/v1689265169/Logo_1_jesh92.png"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
